fix map height on safari

--- a/src/app/pages/landing/components/map-page/map-page.component.scss
+++ b/src/app/pages/landing/components/map-page/map-page.component.scss
@@ -2,6 +2,7 @@
 :host {
     display: block;
     padding: 0 20px;
+    height: calc(100%);
 }
 
 .map-page {
@@ -24,11 +25,11 @@
         padding: 0;
         border-radius: 0px;
         width: 100vw;
-        height: calc(100vh - 100px);
+        height: calc(100%);
     }
 
     .map-page {
-        height: calc(100vh - 100px);
+        height: calc(100%);
     }
 
 
@@ -37,14 +38,19 @@
 //this is because on the same screen size header becomes 80px height
 @media screen and (max-width: 650px) {
 
+    app-map {
+        height: 100%;
+    }
+
     .map-page {
-        height: calc(100vh - 80px);
+        height: 100%;
     }
 
     app-map::ng-deep .map-container {
         padding: 0;
         border-radius: 0px;
-        width: 100vw;
-        height: calc(100vh - 80px);
+        width: 100dvw;
+        height: 100%;
     }
+    
 }
